Add SciPy dependencies to the before_install step of Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "3.4"
 # command to install dependencies
+before_install:
+  - sudo apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran
 install: "pip install -r system/requirements/production.txt"
 # command to run tests
 script: python manage.py test --settings=datascope.settings.test
