--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
     "name": "datascope",
-    "version": "0.6.3"
+    "version": "0.6.3",
+    "artefact": {
+        "includes": [
+            "online_discourse/data/dumps/",
+            "online_discourse/data/feature_frames/"
+        ]
+    }
 }
