--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "includes": [
             "online_discourse/data/dumps/",
             "online_discourse/data/feature_frames/",
-            "online_discourse/data/text_frames/"
+            "online_discourse/data/text_frames/",
+            "future_fashion/data/"
         ]
     }
 }
