--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,6 @@ services:
     image: redis
     command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
+      - ./datascope/redis/redis.conf:/usr/local/etc/redis/redis.conf
     ports:
       - "6379:6379"
