Keep postgres a bit slower, but with better data retention

--- a/datascope/postgres/conf/postgresql.conf
+++ b/datascope/postgres/conf/postgresql.conf
@@ -183,10 +183,10 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 #wal_level = replica			# minimal, replica, or logical
 					# (change requires restart)
-fsync = off				# flush data to disk for crash safety
+#fsync = on				# flush data to disk for crash safety
 					# (turning this off can cause
 					# unrecoverable data corruption)
-synchronous_commit = off		# synchronization level;
+#synchronous_commit = on		# synchronization level;
 					# off, local, remote_write, remote_apply, or on
 #wal_sync_method = fsync		# the default is the first option
 					# supported by the operating system:
@@ -195,7 +195,7 @@ synchronous_commit = off		# synchronization level;
 					#   fsync
 					#   fsync_writethrough
 					#   open_sync
-full_page_writes = off			# recover from partial page writes
+#full_page_writes = on			# recover from partial page writes
 #wal_compression = off			# enable compression of full-page writes
 #wal_log_hints = off			# also do full page writes of non-critical updates
 					# (change requires restart)
