--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -4,21 +4,46 @@ services:
 
   datascope:
     image: eu.gcr.io/datascope-266618/datascope:${RELEASE_VERSION}
-    ports:
-      - "127.0.0.1:8000:8000"
     deploy:
-      replicas: 2
+      replicas: 1
       resources:
         limits:
           cpus: "1"
           memory: 0.5G
       restart_policy:
         condition: any
+    depends_on:
+      - "postgres"
+      - "redis"
     healthcheck:
       test: curl -sS http://localhost:8000/health/?docker=1 || exit 1
       interval: 5s
       timeout: 10s
       retries: 3
+    environment:
+      - PYTHONUNBUFFERED=1
+      - DJANGO_MODE=${DJANGO_MODE}
+      - INVOKE_DJANGO_DEBUG=${INVOKE_DJANGO_DEBUG}
+      - INVOKE_POSTGRES_CREDENTIALS=${INVOKE_POSTGRES_CREDENTIALS}
+    ports:
+      - "127.0.0.1:8000:8000"
+
+  tasks:
+    image: eu.gcr.io/datascope-266618/datascope:${RELEASE_VERSION}
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: "1"
+          memory: 0.5G
+      restart_policy:
+        condition: any
+    command: celery -A datascope worker --loglevel=info
+    depends_on:
+      - "postgres"
+      - "redis"
+    labels:
+      nl.surfpol.tasks: "tasks"
     environment:
       - PYTHONUNBUFFERED=1
       - DJANGO_MODE=${DJANGO_MODE}
@@ -48,6 +73,8 @@ services:
       - ./postgres/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
       - 127.0.0.1:5432:5432
+    labels:
+      nl.surfpol.db: "postgres"
 
   redis:
     image: redis
