--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ before_install:
   - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
   - sudo service postgresql restart
   - sleep 1
-install: "pip install -r datascope/requirements/production.txt"
+install: "pip install -r src/datascope/requirements/production.txt"
 # command to run tests
-script: python manage.py test --settings=datascope.settings_test
+script: cd src && python manage.py test --settings=datascope.settings_test
 services:
   - postgresql
 addons:
