--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
   - sleep 1
 install: "pip install -r src/datascope/requirements/production.txt"
 # command to run tests
-script: cd src && python manage.py test --settings=datascope.settings_test
+before_script: cd src && python manage.py collectstatic --noinput
+script: python manage.py test --settings=datascope.settings_test
 services:
   - postgresql
 addons:
