Improves sharing of code for different purposes and environments

--- a/deploy/.gitignore
+++ b/deploy/.gitignore
@@ -1,4 +1,5 @@
 **/secrets/invoke.*
 **/secrets/gcloud.json
-production/secrets/.env
-.env
+environments/production/secrets/.env
+/.env
+/docker-compose.yml
