--- a/deploy/docker-compose.web.yml
+++ b/deploy/docker-compose.web.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.3'
 
 services:
 
@@ -15,6 +15,7 @@ services:
     depends_on:
       - "postgres"
       - "redis"
+    network_mode: host
     healthcheck:
       test: curl -sS http://localhost:8000/health/?docker=1 || exit 1
       interval: 5s
@@ -26,7 +27,7 @@ services:
       - INVOKE_DJANGO_DEBUG=${INVOKE_DJANGO_DEBUG}
       - INVOKE_POSTGRES_CREDENTIALS=${INVOKE_POSTGRES_CREDENTIALS}
     ports:
-      - "127.0.0.1:8000:8000"
+      - "8000:8000"
 
   tasks:
     image: eu.gcr.io/datascope-266618/datascope:${RELEASE_VERSION}
@@ -42,6 +43,7 @@ services:
     depends_on:
       - "postgres"
       - "redis"
+    network_mode: host
     labels:
       nl.surfpol.tasks: "tasks"
     environment:
@@ -49,6 +51,8 @@ services:
       - DJANGO_MODE=${DJANGO_MODE}
       - INVOKE_DJANGO_DEBUG=${INVOKE_DJANGO_DEBUG}
       - INVOKE_POSTGRES_CREDENTIALS=${INVOKE_POSTGRES_CREDENTIALS}
+    volumes:
+      - /srv/data:/usr/src/data
 
   postgres:
     image: postgres:10.10
@@ -72,7 +76,8 @@ services:
       - postgres-data:/var/lib/postgresql/data/pgdata
       - ./postgres/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
-      - 127.0.0.1:5432:5432
+      - 5432:5432
+    network_mode: host
     labels:
       nl.surfpol.db: "postgres"
 
@@ -90,7 +95,8 @@ services:
     volumes:
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
     ports:
-      - "127.0.0.1:6379:6379"
+      - "6379:6379"
+    network_mode: host
 
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.8.3
@@ -109,6 +115,7 @@ services:
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - network.host=0.0.0.0
+    network_mode: host
     ulimits:
       memlock:
         soft: -1
