--- a/deploy/docker-compose.worker.yml
+++ b/deploy/docker-compose.worker.yml
@@ -14,6 +14,7 @@ services:
         condition: any
     depends_on:
       - "postgres"
+    network_mode: host
     healthcheck:
       test: curl -sS http://localhost:8000/health/?docker=1 || exit 1
       interval: 5s
@@ -25,9 +26,7 @@ services:
       - INVOKE_DJANGO_DEBUG=${INVOKE_DJANGO_DEBUG}
       - INVOKE_POSTGRES_CREDENTIALS=${INVOKE_POSTGRES_CREDENTIALS}
     ports:
-      - "127.0.0.1:8000:8000"
-    volumes:
-      - ./data:/usr/src/data
+      - "8000:8000"
 
   postgres:
     image: postgres:10.10
@@ -51,7 +50,8 @@ services:
       - postgres-data:/var/lib/postgresql/data/pgdata
       - ./postgres/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
-      - 127.0.0.1:5432:5432
+      - 5432:5432
+    network_mode: host
     labels:
       nl.surfpol.db: "postgres"
 
