Includes a static website for the datagrowth docs

--- a/src/uwsgi.ini
+++ b/src/uwsgi.ini
@@ -7,3 +7,7 @@ processes = 2
 threads = 1
 uid = app
 gid = app
+
+route-uri = ^/datagrowth$ redirect:/datagrowth/
+static-index = index.html
+static-map = /datagrowth/=apps/static/sites/datagrowth/
