Updates the server configuration to handle real domains with certificates

--- a/deploy/docker-compose.web.yml
+++ b/deploy/docker-compose.web.yml
@@ -132,7 +132,9 @@ services:
     volumes:
       - ./server/nginx/templates:/etc/nginx/templates
       - ./server/nginx/certificates:/etc/nginx/certificates
+      - ./server/nginx/www:/var/www
       - ./server/nginx/uwsgi-pass.conf:/etc/nginx/uwsgi-pass.conf
+      - ./server/nginx/server-www.conf:/etc/nginx/server-www.conf
     depends_on:
       - "postgres"
       - "datascope"
