--- a/deploy/server/nginx/localhost.conf
+++ b/deploy/server/nginx/localhost.conf
@@ -18,4 +18,9 @@ server {
         include /etc/nginx/uwsgi-pass.conf;
     }
 
+    include                 /etc/nginx/server-www.conf;
+
 }
+
+error_page              404 /404.html;
+error_page              500 502 503 504 /50x.html;
