Adds / location to allow all requests

--- a/deploy/server/nginx/templates/default.conf.template
+++ b/deploy/server/nginx/templates/default.conf.template
@@ -17,6 +17,9 @@ server {
     ssl_certificate_key     /etc/nginx/certificates/data-scope.key;
 
     # DJANGO
+    location / {
+        include /etc/nginx/uwsgi-pass.conf;
+    }
     location /api {
         include /etc/nginx/uwsgi-pass.conf;
     }
