Fixes access to email footer images

--- a/deploy/server/nginx/localhost.conf
+++ b/deploy/server/nginx/localhost.conf
@@ -14,6 +14,10 @@ server {
     location /admin {
         include /etc/nginx/uwsgi-pass.conf;
     }
+    location /static/apps/promo {
+        rewrite ^/static/apps/promo/(.+)$ /static/apps/gff/$1 break;
+        include /etc/nginx/uwsgi-pass.conf;
+    }
     location /static {
         include /etc/nginx/uwsgi-pass.conf;
     }
