Fixes some of the deploy commands for datascope setup

--- a/deploy/docker-compose.web.yml
+++ b/deploy/docker-compose.web.yml
@@ -44,7 +44,7 @@ services:
       - "postgres"
       - "redis"
     labels:
-      nl.surfpol.tasks: "tasks"
+      com.data-scope.tasks: "tasks"
     environment:
       - PYTHONUNBUFFERED=1
       - DJANGO_MODE=${DJANGO_MODE}
