Updates nginx configurations to work with legacy webapps and discourse scope

--- a/deploy/server/nginx/localhost.conf
+++ b/deploy/server/nginx/localhost.conf
@@ -11,6 +11,9 @@ server {
     location /api {
         include /etc/nginx/uwsgi-pass.conf;
     }
+    location /data {
+        include /etc/nginx/uwsgi-pass.conf;
+    }
     location /admin {
         include /etc/nginx/uwsgi-pass.conf;
     }
