--- a/deploy/server/nginx/templates/default.conf.template
+++ b/deploy/server/nginx/templates/default.conf.template
@@ -23,6 +23,9 @@ server {
     location /api {
         include /etc/nginx/uwsgi-pass.conf;
     }
+    location /data {
+        include /etc/nginx/uwsgi-pass.conf;
+    }
     location /admin {
         include /etc/nginx/uwsgi-pass.conf;
     }
