Fixes nginx for globe-scope legacy app

--- a/deploy/server/nginx/templates/globe-scope-com.conf.template
+++ b/deploy/server/nginx/templates/globe-scope-com.conf.template
@@ -4,11 +4,15 @@ server {
 
     # DJANGO
     location / {
-        rewrite ^$ /globe-scope/ break;
+        rewrite ^/(.*)$ /globe-scope/$1 break;
         include /etc/nginx/uwsgi-pass.conf;
     }
     location /views {
-        rewrite ^(.+)$ /static/apps/globe-scope/$1 break;
+        rewrite ^/(.+)$ /static/apps/globe-scope/$1 break;
+        include /etc/nginx/uwsgi-pass.conf;
+    }
+    location /images {
+        rewrite ^/(.+)$ /static/apps/globe-scope/$1 break;
         include /etc/nginx/uwsgi-pass.conf;
     }
     location /api {
