Updates the local Nginx to support globe-scope

--- a/deploy/server/nginx/localhost.conf
+++ b/deploy/server/nginx/localhost.conf
@@ -8,19 +8,33 @@ server {
     listen                  80;
 
     # DJANGO
-    location /api {
+    location / {
         include /etc/nginx/uwsgi-pass.conf;
     }
-    location /data {
+    location /api {
         include /etc/nginx/uwsgi-pass.conf;
     }
     location /admin {
         include /etc/nginx/uwsgi-pass.conf;
     }
+    # Legacy
+    location /data {
+        include /etc/nginx/uwsgi-pass.conf;
+    }
+    # App routes
     location /static/apps/promo {
         rewrite ^/static/apps/promo/(.+)$ /static/apps/gff/$1 break;
         include /etc/nginx/uwsgi-pass.conf;
     }
+    location /globe-scope/views {
+        rewrite ^/(.+)$ /static/apps/$1 break;
+        include /etc/nginx/uwsgi-pass.conf;
+    }
+    location /globe-scope/images {
+        rewrite ^/(.+)$ /static/apps/$1 break;
+        include /etc/nginx/uwsgi-pass.conf;
+    }
+    # Generic static files
     location /static {
         include /etc/nginx/uwsgi-pass.conf;
     }
