--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,7 +35,7 @@ jobs:
                   python-version: ${{ matrix.python-version }}
             - name: Install dependencies
               run: |
-                  sudo apt-get install -y libxml2-dev libxslt1-dev python-dev build-essential
+                  sudo apt-get install -y libxml2-dev libxslt1-dev python3-dev build-essential
                   sudo apt-get install -y libblas-dev liblapack-dev libatlas-base-dev gfortran
                   python -m pip install --upgrade pip
                   pip install -r src/datascope/requirements/production.txt
