--- a/deploy/environments/production/invoke.yml
+++ b/deploy/environments/production/invoke.yml
@@ -22,7 +22,8 @@ datascope:
 postgres:
   credentials:
   host: "postgres"
+  port: 5432
 elastic_search:
-  host: "elastic"
+  host: "http://elasticsearch:9200"
 redis:
   broker_url: "redis://redis:6379/0"
