--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,30 +45,29 @@ services:
     ports:
       - "6379:6379"
 
-  elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.8.3
-    environment:
-      - node.name=elastic
-      - discovery.type=single-node
-      - cluster.name=elastic
-      #- xpack.security.enabled=true
-      #- xpack.security.transport.ssl.enabled=true
-      #- xpack.security.audit.enabled=true
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - network.host=0.0.0.0
-#      - http.cors.enabled=true
-#      - http.cors.allow-origin=https://surfpol.nl
-#      - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
-#      - http.cors.allow-credentials=true
+  elasticsearch:
+    hostname: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.2
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
       - elastic-data:/usr/share/elasticsearch/data
+      - ./deploy/environments/development/secrets/service_tokens:/usr/share/elasticsearch/config/service_tokens
+      - ./deploy/search/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     ports:
-      - 9200:9200
+      - "9200:9200"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.5.3
+    depends_on:
+      - "elasticsearch"
+    ports:
+      - "5601:5601"
+    volumes:
+      - kibana-data:/usr/share/kibana/data
+      - ./deploy/search/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
 
   nginx:
     image: nginx
@@ -86,8 +85,10 @@ services:
   adminer:
     image: adminer
     ports:
-      - 8081:8080
+      - "8081:8080"
 
 volumes:
   postgres-data:
   elastic-data:
+  elastic-config:
+  kibana-data:
