--- a/deploy/docker-compose.web.yml
+++ b/deploy/docker-compose.web.yml
@@ -95,8 +95,9 @@ services:
     ports:
       - "6379:6379"
 
-  elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.8.3
+  elasticsearch:
+    hostname: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.2
     deploy:
       replicas: 1
       resources:
@@ -106,18 +107,27 @@ services:
       restart_policy:
         condition: any
     environment:
-      - node.name=elastic
-      - discovery.type=single-node
-      - cluster.name=elastic
-      - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - network.host=0.0.0.0
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
       - elastic-data:/usr/share/elasticsearch/data
+      - ./deploy/environments/production/secrets/service_tokens:/usr/share/elasticsearch/config/service_tokens
+      - ./deploy/search/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.5.3
+    environment:
+      ELASTICSEARCH_SERVICEACCOUNTTOKEN: ${ELASTICSEARCH_SERVICE_TOKEN}
+    depends_on:
+      - "elasticsearch"
+    ports:
+      - "5601:5601"
+    volumes:
+      - kibana-data:/usr/share/kibana/data
+      - ./deploy/search/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
 
   nginx:
     image: nginx
