--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,8 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.5.3
+    environment:
+      ELASTICSEARCH_SERVICEACCOUNTTOKEN: ${ELASTICSEARCH_SERVICE_TOKEN}
     depends_on:
       - "elasticsearch"
     ports:
