--- a/deploy/docker-compose.web.yml
+++ b/deploy/docker-compose.web.yml
@@ -114,8 +114,8 @@ services:
         hard: -1
     volumes:
       - elastic-data:/usr/share/elasticsearch/data
-      - ./deploy/environments/production/secrets/service_tokens:/usr/share/elasticsearch/config/service_tokens
-      - ./deploy/search/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - ./environments/production/secrets/service_tokens:/usr/share/elasticsearch/config/service_tokens
+      - ./search/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.5.3
@@ -135,7 +135,7 @@ services:
       - "5601:5601"
     volumes:
       - kibana-data:/usr/share/kibana/data
-      - ./deploy/search/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
+      - ./search/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
 
   nginx:
     image: nginx
