--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
         strategy:
             max-parallel: 4
             matrix:
-                python-version: ["3.8", "3.9", "3.10"]
+                python-version: ["3.10", "3.11", "3.12"]
 
         services:
             postgres:
@@ -38,6 +38,7 @@ jobs:
                   sudo apt-get install -y libxml2-dev libxslt1-dev python3-dev build-essential
                   sudo apt-get install -y libblas-dev liblapack-dev libatlas-base-dev gfortran
                   python -m pip install --upgrade pip
+                  pip install setuptools
                   pip install -r src/datascope/requirements/production.txt
                   cd src
                   python manage.py collectstatic --noinput
@@ -45,8 +46,7 @@ jobs:
                   DJANGO_CONTEXT: host
             - name: Tests
               run: |
-                  cd src
-                  python manage.py test --settings=datascope.settings_test
+                  invoke test.run
               env:
                   DJANGO_CONTEXT: host
                   INVOKE_DJANGO_DATABASE_USER: django
